--- a/boostap.html
+++ b/boostap.html
@@ -133,8 +133,8 @@
            <div class="card">
             <img class="card-img-top" src="linkin.jpg" alt="My photo" />
             <div class="card-body">
-                <h4 class="card-title">My photo</h4>
-                <p class="card-text">I LIVE IN nEW YORK CITY Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                <h4 class="card-title">First Bootstrap</h4>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
                      irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
